# logic-simulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SIMULATION.md  clang-format.sh  main.c
.github/workflows/: build.yml
include/digisim/: component.h  connection-list.h  connection.h  element.h  node-list.h  node.h  signal.h  simulation.h  terminal.h  wire.h
include/digisim/components/: all.h  and.h  input.h  not.h  or.h  output.h
include/digisim/elements/: all.h  and.h  arithmetic.h  bit-extender.h  buffer.h  comparator.h  connector.h  constant.h  d-latch.h  demultiplexer.h  gate.h  input.h  multiplexer.h  nand.h  negate.h  nor.h  not.h  or.h  output.h  register.h  shifter.h  splitter.h  sr-latch.h  xnor.h  xor.h
include/digisim/simulations/: unit-delay.h  zero-delay.h
include/digisim/utility/: gate_inputs.h  node-list.h  print.h  signed.h  terminal-list.h
py/: .gitignore  README.md  assemble.py  build.sh  digisim.pxd  digisim.pyx  main.py  requirements.txt  setup.py  test.py
py/logisim/: pinouts.py  project.py
py/schemas/: truth-table-out.schema.json  waveform-in.schema.json  waveform-out.schema.json
src/: component.c  connection-list.c  connection.c  element.c  node-list.c  node.c  signal.c  simulation.c  terminal.c  wire.c
src/components/: and.c  input.c  not.c  or.c  output.c
src/elements/: and.c  arithmetic.c  bit-extender.c  buffer.c  comparator.c  connector.c  constant.c  d-latch.c  demultiplexer.c  gate.c  input.c  multiplexer.c  nand.c  negate.c  nor.c  not.c  or.c  output.c  register.c  shifter.c  splitter.c  sr-latch.c  xnor.c  xor.c
src/simulations/: unit-delay.c  zero-delay.c
src/utility/: gate_inputs.c  node-list.c  print.c  signed.c  terminal-list.c
tests/: CMakeLists.txt  test_arithmetic.cpp  test_bit_extender.cpp  test_fighting.cpp  test_gates.cpp  test_multiplexer.cpp  test_ordering.cpp  test_register.cpp  test_signal.cpp  test_simulation_stress.cpp  test_splitter.cpp
tests/include/utils/: astable.h  bit_string.h  extender.h  gates.h  multiplexer.h  sr-latch.h  wire-fight.h
tests/utils/: astable.cpp  bit_string.cpp  extender.cpp  gates.cpp  multiplexer.cpp  sr-latch.cpp  wire-fight.cpp
